--- a/utils/YeelightSer/Makefile
+++ b/utils/YeelightSer/Makefile
@@ -88,9 +88,9 @@ define Package/YeelightSer/install
 	$(INSTALL_DIR) 	$(1)/usr/sbin
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/YeelightSer $(1)/usr/sbin
 	$(INSTALL_DIR) 	$(1)/etc/init.d
-	$(CP) $(PKG_BUILD_DIR)/init.d/yeelightser $(1)/etc/init.d/
+	$(CP) $(PKG_BUILD_DIR)/sh/init.d/yeelightser $(1)/etc/init.d/
 	$(INSTALL_DIR) 	$(1)/etc/hotplug.d/iface
-	$(CP) $(PKG_BUILD_DIR)/hotplug.d/30-yeelightser $(1)/etc/hotplug.d/iface/
+	$(CP) $(PKG_BUILD_DIR)/sh/hotplug.d/30-yeelightser $(1)/etc/hotplug.d/iface/
 	
 endef
 
